<resources xmlns:ns2="http://schemas.android.com/tools">
    <string name="app_name_not_used">flube.it Driver</string>
    <string name="app_name_prod">flube.it Driver</string>
    <string name="app_name_demo">flube.it Driver DEMO</string>
    <string name="app_name_staging">flube.it Driver STAGING</string>
    <string name="app_name_dev">flube.it Driver DEV</string>
    <string name="app_name_prod_debug">flube.it Driver</string>
    <string name="app_name_demo_debug">flube.it Driver DEMO</string>
    <string name="app_name_staging_debug">flube.it Driver STAGING</string>
    <string name="app_name_dev_debug">flube.it Driver DEV</string>
    <string name="active_batch_notification_channel_name">Active Batch</string>
    <string name="active_batch_notification_channel_description">Shows status of your active batch</string>
    <string name="public_offer_notification_channel_name">Public Offers</string>
    <string name="public_offer_notification_channel_description">Lets you know when a new public offer is available</string>
    <string name="personal_offer_notification_channel_name">Personal Offers</string>
    <string name="personal_offer_notification_channel_description">Lets you know when a new public offer is available</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoic2NyYXBweWF0eCIsImEiOiJjajViNjNjNHUwdTNxMzNwMWg4ZWMwN2thIn0.olrIh8570OamyDRxCaHBuA</string>
    <string-array name="permissions_check_required_dangerous_permissions">
        <item>android.permission.CAMERA</item>
        <item>android.permission.ACCESS_FINE_LOCATION</item>
        <item>android.permission.ACCESS_COARSE_LOCATION</item>
    </string-array>
    <string name="active_batch_service_notification_title">flube.it Driver</string>
    <string name="active_batch_service_notification_text">Active batch in progress</string>
    <string name="active_batch_service_notification_subtext">Active batch in progress</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_batch_itinerary">Active Batch Itinerary</string>
    <string name="nav_menu_order_itinerary">Current Order Itinerary</string>
    <string name="nav_menu_current_step">Current Step</string>
    <string name="nav_menu_offers">Public Offers</string>
    <string name="nav_menu_personal_offers">Personal Offers</string>
    <string name="nav_menu_scheduled_batches">Scheduled Work</string>
    <string name="nav_menu_messages">Messages</string>
    <string name="nav_menu_earnings">Earnings</string>
    <string name="nav_menu_account">Account</string>
    <string name="nav_menu_help">Help</string>
    <string name="nav_menu_demo">Demo Offers</string>
    <string name="nav_menu_dev_section_title">Developer Tools</string>
    <string name="nav_menu_qa_section_title">QA Tools</string>
    <string name="nav_menu_dev_offers">Make Test Offers</string>
    <string name="nav_menu_dev_earnings">Test Earnings</string>
    <string name="toolbar_switch_looking_for_work_OFF">Search for Offers</string>
    <string name="toolbar_switch_looking_for_work_ON">Searching for Offers</string>
    <string name="step_detail_due_by_caption">Due by: </string>
    <string name="splashscreen_title">flube.it Driver</string>
    <string name="login_title">Sign In</string>
    <string name="login_email_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="login_submit_caption">Submit</string>
    <string name="login_error_text">error text</string>
    <string name="signing_in_banner_text">Signing in...</string>
    <string name="signin_submit_caption">Sign In</string>
    <string name="signin_authui_response_error_dialog_title">SignIn Problem</string>
    <string name="fui_sign_in_default">Sign in to flube.it </string>
    <string name="fui_welcome_back_email_header">You\'re a flube.it Driver!</string>
    <string name="fui_welcome_back_password_prompt_body">Enter your password for %1$s.</string>
    <string name="login_auth_failure_message">The email address or password is incorrect</string>
    <string name="login_auth_user_not_a_driver_message">This user is not a Flube.it driver.  Please try signing in with another user ID.</string>
    <string name="account_logout_caption">Sign Out</string>
    <string name="account_title">Account Info</string>
    <string name="account_profile_details_default">No profile information is available</string>
    <string name="account_activity_title">Account</string>
    <string name="account_activity_software_version">software version</string>
    <string name="quit_app_alert_title">Exit flube.it Driver</string>
    <string name="quit_app_alert_message">Are you sure you want to exit?</string>
    <string name="quit_app_alert_positive_caption">Yes</string>
    <string name="quit_app_alert_negative_caption">No</string>
    <string name="access_denied_app_alert_title">Access Denied</string>
    <string name="access_denied_app_alert_message">Are you sure you want to exit?</string>
    <string name="access_denied_app_alert_neutral_caption">OK</string>
    <string name="no_profile_app_alert_title">No profile data</string>
    <string name="no_profile_app_alert_message">Could not find profile data for this user</string>
    <string name="no_profile_app_alert_neutral_caption">OK</string>
    <string name="demo_offers_title">Demo Offers</string>
    <string name="demo_offers_no_offers_available">There are no demo offers</string>
    <string name="demo_offers_instructions">Demo offers let you practice claiming offers and performing the tasks in a batch of service orders\n\nYou will NOT BE PAID for completing demo offers, they are just for practice</string>
    <string name="demo_offers_generate_caption">Make a new demo offer</string>
    <string name="demo_offers_generate_confirmation">Are you sure you want to make a new demo offer?\n\nThe existing demo offer will be replaced</string>
    <string name="demo_offers_make_instructions">Tap the type of demo offer to create</string>
    <string name="demo_offers_make_two_step_button_caption">Two Step Offer, with navigation step and simple photo step</string>
    <string name="demo_offers_make_auto_photos_button_caption">Two Step Offer, with navigation step and auto photo step</string>
    <string name="demo_offers_make_oil_change">Oil Change Offer</string>
    <string name="demo_offers_alert_created_title">SUCCESS</string>
    <string name="demo_offers_alert_created_message">You created a demo offer!</string>
    <string name="earnings_activity_title">Earnings</string>
    <string name="test_earnings_activity_title">Test Earnings</string>
    <string name="test_offers_activity_title">Make Test Offers</string>
    <string name="test_offer_created_success_title">SUCCESS</string>
    <string name="test_offer_created_success_message">You created a test offer!</string>
    <string name="test_offer_created_failure_title">FAILURE</string>
    <string name="test_offer_created_failure_message">Unable to create the test offer</string>
    <string name="help_activity_title">Help</string>
    <string name="home_activity_title">Home</string>
    <string name="home_summary_active_batch_title">Active Batch</string>
    <string name="home_summary_active_batch_detail_no_active_batch">You have no active batch</string>
    <string name="home_summary_active_batch_button_caption">Go to active batch</string>
    <string name="home_summary_scheduled_batches_title">Scheduled Batches</string>
    <string name="home_summary_scheduled_batches_detail_no_batches">You have no scheduled batches</string>
    <string name="home_summary_scheduled_batches_detail_one_batch">You have 1 scheduled batch</string>
    <string name="home_summary_scheduled_batches_detail_some_batches">You have %1$d scheduled batches</string>
    <string name="home_summary_scheduled_batches_button_caption">Go to scheduled batches</string>
    <string name="home_summary_public_offers_title">Public Offers</string>
    <string name="home_summary_public_offers_detail_no_offers">There are no public offers available</string>
    <string name="home_summary_public_offers_detail_one_offer">There is 1 public offer available</string>
    <string name="home_summary_public_offers_detail_some_offers">There are %1$d public offers available</string>
    <string name="home_summary_public_offers_button_caption">Go to public offers</string>
    <string name="home_summary_personal_offers_title">Personal Offers</string>
    <string name="home_summary_personal_offers_detail_no_offers">You have no personal offers available</string>
    <string name="home_summary_personal_offers_detail_one_offer">You have 1 personal offer available</string>
    <string name="home_summary_personal_offers_detail_some_offers">You have %1$d personal offers available</string>
    <string name="home_summary_personal_offers_button_caption">Go to personal offers</string>
    <string name="home_summary_demo_offers_title">Demo Offers</string>
    <string name="home_summary_demo_offers_detail_no_offers">You have no demo offers</string>
    <string name="home_summary_demo_offers_detail_one_offer">You have 1 demo offer</string>
    <string name="home_summary_demo_offers_detail_some_offers">You have %1$d demo offers</string>
    <string name="home_summary_demo_offers_button_caption">Go to demo offers</string>
    <string name="home_no_active_batch_activity_title">Home</string>
    <string name="home_active_batch_activity_title">Active Batch</string>
    <string name="messages_activity_title">Messages</string>
    <string name="public_offers_activity_title">Public Offers</string>
    <string name="public_offers_no_offers_available">There are no available public offers</string>
    <string name="personal_offers_activity_title">Personal Offers</string>
    <string name="personal_offers_no_offers_available">You have no personal offers</string>
    <string name="offer_claim_activity_title">Claim Offer</string>
    <string name="offer_claim_button_caption">Claim Offer</string>
    <string name="offer_claim_tab_zero_caption">Details</string>
    <string name="offer_claim_tab_one_caption">Orders</string>
    <string name="offer_claim_tab_two_caption">Locations</string>
    <string name="offer_claim_request_banner_caption">Claiming Offer</string>
    <string name="offer_claim_alert_success_title">SUCCESS</string>
    <string name="offer_claim_alert_success_message">You claimed an offer!</string>
    <string name="offer_claim_alert_failure_title">FAILURE</string>
    <string name="offer_claim_alert_failure_message">Sorry, someone else claimed this offer</string>
    <string name="offer_claim_alert_timeout_title">NO RESPONSE</string>
    <string name="offer_claim_alert_timeout_message">Never received a response for your attempt to claim this offer</string>
    <string name="active_batch_completed_service_order_alert_title">Order Complete</string>
    <string name="active_batch_completed_service_order_alert_message">You completed an order!</string>
    <string name="active_batch_completed_batch_alert_title">Batch Complete</string>
    <string name="active_batch_completed_batch_alert_message">You completed a batch!</string>
    <string name="signature_request_saving_banner">Saving...</string>
    <string name="get_signature_save_button_caption">Save</string>
    <string name="get_signature_clear_button_caption">Clear</string>
    <string name="get_signature_instructions_text">Use your finger to provide your signature</string>
    <string name="communication_activity_tab_zero_caption">Order 1</string>
    <string name="communication_activity_tab_one_caption">Order 2</string>
    <string name="communication_activity_tab_two_caption">Order 3</string>
    <string name="communication_activity_tab_three_caption">Order 4</string>
    <string name="communication_activity_tab_four_caption">Order 5</string>
    <string name="communication_activity_banner_caption_calling">Calling...</string>
</resources>