<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. scrapdoodle, LLC.  All Rights Reserved
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp">

    <TextView
        android:id="@+id/instructionText"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_two_step"

        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        android:textAppearance="@style/DemoOfferMakeInstruction"
        android:text="@string/demo_offers_make_instructions" />

    <Button
        android:id="@+id/button_two_step"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/instructionText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_auto_photo"

        android:layout_marginTop="20dp"

        android:text="@string/demo_offers_make_two_step_button_caption"

        android:onClick="onTwoStepClicked" />

    <Button
        android:id="@+id/button_auto_photo"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/button_two_step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="20dp"

        android:text="@string/demo_offers_make_auto_photos_button_caption"

        android:onClick="onAutoPhotoClicked" />

    <Button
        android:id="@+id/button_oil_change"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/button_auto_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="20dp"

        android:text="@string/demo_offers_make_oil_change"

        android:onClick="onOilChangeClicked" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/demo_offer_make_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitEnd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="material_wave_loading.json"
        app:lottie_loop="true"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

</android.support.constraint.ConstraintLayout>