<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. scrapdoodle, LLC.  All Rights Reserved
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <include layout="@layout/contact_person_support"
        android:id="@+id/contact_person_support"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"

        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"

        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/service_order_tab"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:targetApi="lollipop"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/service_order_tab"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/contact_person_support"
        app:layout_constraintBottom_toTopOf="@+id/contact_person_customer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:tabMode="fixed"
        app:tabGravity="fill"
        app:tabTextAppearance = "@style/CommunicationTabTextAppearance">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communication_activity_tab_zero_caption" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communication_activity_tab_one_caption" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communication_activity_tab_two_caption" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communication_activity_tab_three_caption" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communication_activity_tab_four_caption" />

    </android.support.design.widget.TabLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/communication_animation"

        tools:visibility="gone"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:adjustViewBounds="true"
        android:scaleType="fitEnd"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/communication_banner"

        app:lottie_autoPlay="true"
        app:lottie_fileName="material_wave_loading.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/communication_banner"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/communication_activity_banner_caption_calling"

        android:textAlignment="center"
        android:textAppearance="@style/CommunicationBannerStyle"

        tools:visibility="gone"

        app:layout_constraintTop_toBottomOf="@+id/communication_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <include
        android:id="@+id/contact_person_customer"
        layout="@layout/contact_person_customer"

        tools:visibility="visible"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:elevation="8dp"

        app:layout_constraintTop_toBottomOf="@+id/service_order_tab"
        app:layout_constraintBottom_toTopOf="@+id/contact_person_service_provider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" tools:targetApi="lollipop" />

    <include
        android:id="@+id/contact_person_service_provider"
        layout="@layout/contact_person_service_provider"

        tools:visibility="visible"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:elevation="8dp"

        app:layout_constraintTop_toBottomOf="@+id/contact_person_customer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" tools:targetApi="lollipop" />




</android.support.constraint.ConstraintLayout>
