<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. scrapdoodle, LLC.  All Rights Reserved
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/hGuideline50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        app:penColor="@android:color/black"
        android:background="@drawable/signature_border"/>

    <TextView
        android:id="@+id/signature_instructions"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"

        android:textAlignment="center"

        android:textAppearance="@style/SignatureInstructionsStyle"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hGuideline50"

        android:text="@string/get_signature_instructions_text" />


    <android.support.constraint.Guideline
        android:id="@+id/hGuideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.50"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:id="@+id/vGuideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.50"
        android:orientation="vertical" />

    <Button
        android:id="@+id/signature_button_save"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/signature_instructions"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/vGuideline50"

        android:layout_marginTop="8dp"
        android:text="@string/get_signature_save_button_caption" />

    <Button
        android:id="@+id/signature_button_clear"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/signature_instructions"

        app:layout_constraintLeft_toRightOf="@+id/vGuideline50"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="8dp"

        android:text="@string/get_signature_clear_button_caption" />

    <TextView
        android:id="@+id/signature_saving_banner"

        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/signature_request_saving_banner"
        android:textAlignment="center"

        android:textAppearance="@style/SignatureRequestBannerStyle"

        app:layout_constraintBottom_toTopOf="@+id/signature_saving_animation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/signature_saving_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitEnd"

        android:visibility="gone"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signature_saving_banner"
        app:layout_constraintBottom_toBottomOf="parent"

        app:lottie_autoPlay="true"
        app:lottie_fileName="material_wave_loading.json"
        app:lottie_loop="true"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />



</android.support.constraint.ConstraintLayout>